--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Exiled Pride Website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="E:\downloads\1648878444418.png">
+<body background="1648878444418.png">
   <marquee scrolldelay=1> <font size=15> <font color="Lime"> Welcome to the Official website of Exiled Pride</font> </marquee>
     <img src="E:\downloads\exiledpride.jpeg" height="150" width="150" align="right">
     <A HREF="aboutus.html" class="a"> About Us </A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
