--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 </body>
-<body background="E:\downloads\1648878444418.png" class="bodya"> <h1> About Exiled Pride Esports</h1>
+<body background="img/bg.png" class="bodya"> <h1> About Exiled Pride Esports</h1>
   𝘌𝘹𝘪𝘭𝘦𝘥 𝘗𝘳𝘪𝘥𝘦 𝘌-𝘚𝘱𝘰𝘳𝘵𝘴 𝘣𝘦𝘭𝘰𝘯𝘨𝘴 𝘵𝘰 𝘢 𝘨𝘳𝘰𝘶𝘱 𝘰𝘧 𝘠𝘰𝘶𝘯𝘨𝘴𝘵𝘦𝘳𝘴. <br>
 Pratyush Mudbhari is the Founder of the E-sports. <br>
 Along With Tisha Shrestha Mudbhari And Ganesh Gyawali as our Honorable Owner. <br>
