--- a/complete.html
+++ b/complete.html
@@ -14,6 +14,6 @@
       <td>SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td> Champions </td> <td> 1st Runner Ups</td> <td> 2nd Runner Ups</td>
       </tr>
       </table> 
-    <A HREF="index.html" class="c"> <img src="img/backarrow.png" class="mg"> </A>
+    <A HREF="index.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
   </body>
 </html>
