--- a/complete.html
+++ b/complete.html
@@ -7,7 +7,7 @@
   <title>Completed Events</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="E:\downloads\1648878444418.png"> <h1> Completed Events </h1>
+<body background="img/1648878444418.png" class="bodya"> <h1> Completed Events </h1>
   <h3 class="ha">Yet to complete our first event </h3>
   <table border="2" align="center" width="75%" class="tc">
     <tr>
