--- a/contactus.html
+++ b/contactus.html
@@ -7,11 +7,11 @@
   <title>Our Socials</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-    <body background="E:\downloads\1648878444418.png"> 
+    <body background="img/1648878444418.png" class="bodya">
       <h1> Our Socials </h1>
         <A HREF="https://discord.gg/KKa4Z6ceY2" class="b"> <IMG SRC="E:\downloads\discord logo.png"" HEIGHT="25" WIDTH="35"> Click to join our discord </A>  <br>
         <A HREF="https://www.instagram.com/exiled_pride/" class="b"> <IMG SRC="E:\downloads\insta.png" HEIGHT="25" WIDTH="35"> Click to see our instagram page </A> <br>
         <A HREF="https://www.youtube.com/channel/UCyTlqfUK0EqieQEJknuaEHw" class="b"> <IMG SRC="E:\downloads\youtubelogo.png" HEIGHT="25" WIDTH="35"> Click to check us on youtube </A> <br>
         <A HREF="https://www.facebook.com/Team-Exiled-Pride-101638042337435" class="b"> <IMG SRC="E:\downloads\facebook.png" HEIGHT="25" WIDTH="35"> Click to see our facebook page </A> <br>
-          <A HREF="index.html" class="c"> <img src="img/backarrow.png" class="mg"> </A>
+          <A HREF="index.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
     </body> </html>
