--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body background="1648878444418.png">
   <marquee scrolldelay=1> <font size=15> <font color="Lime"> Welcome to the Official website of Exiled Pride</font> </marquee>
-    <img src="img/logo.jpeg" height="150" width="150" align="right">
+    <img src="img/exiledpride.jpeg" height="150" width="150" align="right">
     <A HREF="aboutus.html" class="a"> About Us </A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <A HREF="ongoing.html" class="a"> Ongoing Events </A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <A HREF="complete.html" class="a"> Completed Events </A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
