--- a/ongoing.html
+++ b/ongoing.html
@@ -7,7 +7,7 @@
   <title>Ongoing Events</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="E:\downloads\1648878444418.png"> <h1> Ongoing Events</h1>
+<body background="img/1648878444418.png" class="bodya"> <h1> Ongoing Events</h1>
   <table border="2" align="center" width="75%" class="tc">
     <tr>
       <td> SN. </td><td> Name of the event </td> <td> Prizepool </td> <td> Status </td> <td> Registration </td> 
@@ -19,6 +19,6 @@
       <td> 2 </td><td>PUBG Mobile Attackers' Championship</td> <td> Nrs. 30000 </td><td> Ongoing </td> <td> Closed </td>
     </tr>
   </table>
-  <A HREF="index.html" class="c"> <img src="E:\downloads\backkarrow.png" class="mg"> </A>
+  <A HREF="index.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </body>
 </html>
