--- a/paid scrimsd.html
+++ b/paid scrimsd.html
@@ -7,7 +7,7 @@
   <title> Paid Scrims </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="E:\downloads\1648878444418.png" class="bodya"> <h1> Paid Scrims </h1>
+<body background="img/1648878444418.png" class="bodya"> <h1> Paid Scrims </h1>
 ◆ 𝐎𝐑𝐆𝐀𝐍𝐈𝐙𝐄𝐃 𝐁𝐘: 𝙴𝚇𝙸𝙻𝙴𝙳 𝙿𝚁𝙸𝙳𝙴<br>
 ◆ 𝐒𝐔𝐏𝐏𝐎𝐑𝐓𝐄𝐃 𝐁𝐘: 𝙰𝟷𝙳𝟷 𝙴𝚂𝙿𝙾𝚁𝚃𝚂 & 𝙼𝙾𝙼 𝙴𝚂𝙿𝙾𝚁𝚃𝚂<br>
 ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬<br>
@@ -21,6 +21,6 @@
       </tr>
       </table> 
       The records are only kept upto 1 month of the scrims completion. <br>
-    <A HREF="index.html" class="c"> <img src="E:\downloads\backkarrow.png" class="mg"> </A>
+    <A HREF="index.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </body>
 </html>
