--- a/contactus.html
+++ b/contactus.html
@@ -13,5 +13,5 @@
         <A HREF="https://www.instagram.com/exiled_pride/" class="b"> <IMG SRC="img/insta.png" HEIGHT="25" WIDTH="35"> Click to see our instagram page </A> <br>
         <A HREF="https://www.youtube.com/channel/UCyTlqfUK0EqieQEJknuaEHw" class="b"> <IMG SRC="img/youtubelogo.png" HEIGHT="25" WIDTH="35"> Click to check us on youtube </A> <br>
         <A HREF="https://www.facebook.com/Team-Exiled-Pride-101638042337435" class="b"> <IMG SRC="img/facebook.png" HEIGHT="25" WIDTH="35"> Click to see our facebook page </A> <br>
-          <A HREF="index.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
+           <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
     </body> </html>
