--- a/ongoing.html
+++ b/ongoing.html
@@ -19,6 +19,6 @@
       <td> 2 </td><td>PUBG Mobile Attackers' Championship</td> <td> Nrs. 30000 </td><td> Ongoing </td> <td> Closed </td>
     </tr>
   </table>
-  <A HREF="index.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
+ <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </body>
 </html>
