--- a/paid scrimsd.html
+++ b/paid scrimsd.html
@@ -21,6 +21,6 @@
       </tr>
       </table> 
       The records are only kept upto 1 month of the scrims completion. <br>
-    <A HREF="index.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
+ <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </body>
 </html>
