--- a/ongoing.html
+++ b/ongoing.html
@@ -13,12 +13,13 @@
       <td> SN. </td><td> Name of the event </td> <td> Prizepool </td> <td> Status </td> <td> Registration </td> 
     </tr>
     <tr>
-      <td> 1 </td><td>Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Not Started </td> <td> Open </td>
+      <td> 1 </td><td>Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Not Started </td> <td> Closed </td>
     </tr>
     <tr>
       <td> 2 </td><td>PUBG Mobile Attackers' Championship</td> <td> Nrs. 30000 </td><td> Ongoing </td> <td> Closed </td>
     </tr>
   </table>
+It may take some time to update
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </body>
 </html>
