--- a/complete.html
+++ b/complete.html
@@ -8,7 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body background="img/1648878444418.png" class="bodya"> <h1> Completed Events </h1>
-  <h3 class="ha">Yet to complete our first event </h3>
+All the completed events from Exiled Pride Official server in discord will be published here for records.
   <table border="2" align="center" width="75%" class="tc">
     <tr>
       <td>SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td> Champions </td> <td> 1st Runner Ups</td> <td> 2nd Runner Ups</td>
