--- a/ongoing.html
+++ b/ongoing.html
@@ -8,6 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body background="img/1648878444418.png" class="bodya"> <h1> Ongoing Events</h1>
+All the ongoing events will be published here for records of our events.
   <table border="2" align="center" width="75%" class="tc">
     <tr>
       <td> SN. </td><td> Name of the event </td> <td> Prizepool </td> <td> Status </td> <td> Registration </td> 
