--- a/home.html
+++ b/home.html
@@ -10,10 +10,16 @@
 <body background="1648878444418.png">
   <marquee scrolldelay=1> <font size=15> <font color="Lime"> Welcome to the Official website of Exiled Pride</font> </marquee>
     <img src="img/exiledpride.jpeg" height="150" width="150" align="right">
-    <A HREF="aboutus.html" class="a"> About Us </A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <A HREF="ongoing.html" class="a"> Ongoing Events </A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <A HREF="complete.html" class="a"> Completed Events </A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    <A HREF="paid scrimsd.html" class="a"> Paid Scrims </A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    <A HREF="contactus.html" class="a"> Our Socials </A>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    <A HREF="https://surveyheart.com/form/62065b4d0943cd5d303077b7" class="a"> Apply For EXP </A>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br>
+    <A HREF="aboutus.html" class="a"> About Us </A> <---- The information About Us <br>
+<br>
+    <A HREF="ongoing.html" class="a"> Ongoing Events </A> <---- The information related to the ongoing events in out server. <br>
+<br> 
+    <A HREF="complete.html" class="a"> Completed Events </A> <---- The information related to the events successfully completed in our server. <br>
+<br>
+    <A HREF="paid scrimsd.html" class="a"> Paid Scrims </A> <---- The information related to Paid Scrims of our server. <br>
+<br>
+    <A HREF="contactus.html" class="a"> Our Socials </A> <----  Our Social handles for updates. <br>
+<br>
+    <A HREF="https://surveyheart.com/form/62065b4d0943cd5d303077b7" class="a"> Apply For EXP </A> <---- Our staff application form for Discord server. <br>
+<br>
 </body> </html>
