--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body background="1648878444418.png" class="bodya">
   <marquee scrolldelay=1> <font size=15> <font color="Lime"> Welcome to the Official website of Exiled Pride</font> </marquee>
-    
+    <A HREF="img/exiledpride.jpeg" class="a"> <img src="img/exiledpride.jpeg" height="150" width="150" align="right"> </A>
     <A HREF="aboutus.html" class="a"> About Us </A> <---- The information About Us <br>
 <br>
     <A HREF="ongoing.html" class="a"> Ongoing Events </A> <---- The information related to the ongoing events in out server. <br>
