--- a/complete.html
+++ b/complete.html
@@ -11,7 +11,7 @@
 All the completed events from Exiled Pride Official server in discord will be published here for records.
   <table border="2" align="center" width="75%" class="tc">
     <tr>
-      <td>SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td> Champions </td> <td> 1st Runner Ups</td> <td> 2nd Runner Ups</td>
+      <td>SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups</td> <td class="td3"> 2nd Runner Ups</td>
       </tr>
       </table> 
      <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
