--- a/paid scrimsd.html
+++ b/paid scrimsd.html
@@ -17,7 +17,7 @@
 ➠ 𝙻𝙸𝚅𝙴 𝙿𝚁𝙾𝙳𝚄𝙲𝚃𝙸𝙾𝙽<br>
 <table border="2" align="center" width="75%" class="tc">
     <tr>
-      <td> Date </td> <td> Winners </td> <td> 1st Runner Ups </td> <td> 2nd Runner Ups</td> <td> Payment </td>
+      <td> Date </td> <td class="td1"> Winners </td> <td class="td2"> 1st Runner Ups</td> <td class="td3"> 2nd Runner Ups</td> <td> Payment </td>
       </tr>
       </table> 
       The records are only kept upto 1 month of the scrims completion. <br>
