--- a/paid scrimsd.html
+++ b/paid scrimsd.html
@@ -10,8 +10,8 @@
 <body background="img/1648878444418.png" class="bodya"> <h1> Paid Scrims </h1>
 ◆ 𝐎𝐑𝐆𝐀𝐍𝐈𝐙𝐄𝐃 𝐁𝐘: 𝙴𝚇𝙸𝙻𝙴𝙳 𝙿𝚁𝙸𝙳𝙴<br>
 ◆ 𝐒𝐔𝐏𝐏𝐎𝐑𝐓𝐄𝐃 𝐁𝐘: 𝙰𝟷𝙳𝟷 𝙴𝚂𝙿𝙾𝚁𝚃𝚂 & 𝙼𝙾𝙼 𝙴𝚂𝙿𝙾𝚁𝚃𝚂<br>
-▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬<br>
-◆ ▬▬▬▬▬ ツ𝐃𝐀𝐈𝐋𝐘 5 PM 𝐏𝐀𝐈𝐃 𝐒𝐂𝐑𝐈𝐌𝐒ツ ▬▬▬▬▬ ◆<br>
+<br>
+◆ツ𝐃𝐀𝐈𝐋𝐘 5 PM 𝐏𝐀𝐈𝐃 𝐒𝐂𝐑𝐈𝐌𝐒ツ◆<br>
 ➠ 𝙴𝙽𝚃𝚁𝚈 𝙵𝙴𝙴 𝚁𝚂 𝟸𝟶𝟶/-<br>
 ➠ 𝙿𝚁𝙸𝚉𝙴𝙿𝙾𝙾𝙻 𝙾𝙵 𝚁𝚂 𝟹𝟶𝟶𝟶/-<br>
 ➠ 𝙻𝙸𝚅𝙴 𝙿𝚁𝙾𝙳𝚄𝙲𝚃𝙸𝙾𝙽<br>
