--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 <br> 
     <A HREF="complete.html" class="a"> Completed Events </A> <---- The information related to the events successfully completed in our server. <br>
 <br>
-    <A HREF="paid scrimsd.html" class="a"> Paid Scrims </A> <---- The information related to Paid Scrims of our server. <br>
+    <A HREF="paidscrims.html" class="a"> Paid Scrims </A> <---- The information related to Paid Scrims of our server. <br>
 <br>
     <A HREF="contactus.html" class="a"> Our Socials </A> <----  Our Social handles for updates. <br>
 <br>
