--- a/home.html
+++ b/home.html
@@ -22,4 +22,6 @@
 <br>
     <A HREF="https://surveyheart.com/form/62065b4d0943cd5d303077b7" class="a"> Apply For EXP </A> <---- Our staff application form for Discord server. <br>
 <br>
+<A HREF="change.html" class="a"> Change Logs </A> <---- Change logs of the website. <br>
+<br>
 </body> </html>
