--- a/change.html
+++ b/change.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Exiled Pride Website</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body background="1648878444418.png" class="bodya">
