--- a/change.html
+++ b/change.html
@@ -9,3 +9,13 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body background="1648878444418.png" class="bodya">
+Update 1 (21st June): The template for mobile which was repeating is almost set up. <br>
+<br>
+Update 2 (21st June) : The design has been changed for the home page. <br>
+<br>
+Update 3 (22nd June): The color for champions, 1st runner up and 2nd runner up is set to gold, silver and bronze respectively.<br>
+<br>
+Update 4 (22nd June): Added Change Logs to the website. <br>
+<br>
+</body>
+</html>
