--- a/change.html
+++ b/change.html
@@ -8,7 +8,7 @@
   <title>Exiled Pride Website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="1648878444418.png" class="bodya">
+<body background="1648878444418.png" class="bodya"> <h1> Change Logs <h1>
 Update 1 (21st June): The template for mobile which was repeating is almost set up. <br>
 <br>
 Update 2 (21st June) : The design has been changed for the home page. <br>
