--- a/change.html
+++ b/change.html
@@ -18,4 +18,5 @@ Update 3 (22nd June): The color for champions, 1st runner up and 2nd runner up i
 Update 4 (22nd June): Added Change Logs to the website. <br>
 <br>
 </body>
+<A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </html>
