--- a/home.html
+++ b/home.html
@@ -24,4 +24,5 @@
 <br>
 <A HREF="change.html" class="a"> Change Logs </A> <---- Change logs of the website. <br>
 <br>
+<iframe src="https://discord.com/widget?id=903597819447898143&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body> </html>
