--- a/change.html
+++ b/change.html
@@ -17,6 +17,8 @@ Update 3 (22nd June): The color for champions, 1st runner up and 2nd runner up i
 <br>
 Update 4 (22nd June): Added Change Logs to the website. <br>
 <br>
+Update 5 (23rd June): Added Discord, YouTube and InstaGram widgets in Our Socials section. <br>
+<br>
 </body>
 <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </html>
