--- a/contactus.html
+++ b/contactus.html
@@ -13,5 +13,10 @@
 <iframe src="https://discord.com/widget?id=903597819447898143&theme=dark" width="280" height="300" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe> <br>
         <A HREF="https://www.instagram.com/exiled_pride/" class="b"> <IMG SRC="img/insta.png" HEIGHT="25" WIDTH="35"> Click to see our instagram page </A> <br>
         <A HREF="https://www.youtube.com/channel/UCyTlqfUK0EqieQEJknuaEHw" class="b"> <IMG SRC="img/youtubelogo.png" HEIGHT="25" WIDTH="35"> Click to check us on youtube </A> <br>
+<div data-mc-src="d9490f7a-bffd-4ee0-9bf6-8cbca65a9e85#youtube"></div>
+        <script 
+  src="https://cdn2.woxo.tech/a.js#62b454f3af41930021af37f4" 
+  async data-usrc>
+</script>
            <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
     </body> </html>
