--- a/home.html
+++ b/home.html
@@ -24,5 +24,5 @@
 <br>
 <A HREF="change.html" class="a"> Change Logs </A> <---- Change logs of the website. <br>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/cI96nybhzr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cI96nybhzr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body> </html>
