--- a/change.html
+++ b/change.html
@@ -17,7 +17,7 @@ Update 3 (22nd June): The color for champions, 1st runner up and 2nd runner up i
 <br>
 Update 4 (22nd June): Added Change Logs to the website. <br>
 <br>
-Update 5 (23rd June): Added Discord widget in Our Socials section. <br>
+Update 5 (23rd June): Added Discord, Youtube and Instragram widgets in Our Socials section. <br>
 <br>
 </body>
 <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
