--- a/ongoing.html
+++ b/ongoing.html
@@ -14,10 +14,10 @@ All the ongoing events will be published here for records of our events.
       <td> SN. </td><td> Name of the event </td> <td> Prizepool </td> <td> Status </td> <td> Registration </td> 
     </tr>
     <tr>
-      <td> 1 </td><td>Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Starting Soon! </td> <td> Closed </td>
+      <td> 1 </td><td>Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Ongoing (Qualifier) </td> <td> Closed </td>
     </tr>
     <tr>
-      <td> 2 </td><td>PUBG Mobile Attackers' Championship</td> <td> Nrs. 30000 </td><td> Ongoing (Semi Final) </td> <td> Closed </td>
+      <td> 2 </td><td>PUBG Mobile Attackers' Championship</td> <td> Nrs. 30000 </td><td> Ongoing (Grand Final) </td> <td> Closed </td>
     </tr>
   </table>
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
