--- a/paidscrims.html
+++ b/paidscrims.html
@@ -17,7 +17,7 @@ Prizepool = Rs.3000/- <br>
 Live Production <br>
 <table border="2" align="center" width="75%" class="tc">
     <tr>
-      <td> Date </td> <td class="td1"> Winners </td> <td class="td2"> 1st Runner Ups</td> <td class="td3"> 2nd Runner Ups</td> <td> Payment </td>
+      <td> Date </td> <td class="td1"> Winners </td> <td class="td2"> 1st Runner Ups</td> <td class="td3"> 2nd Runner Ups</td>
       </tr>
       </table> 
       The records are only kept upto 1 month of the scrims completion. <br>
