--- a/ongoing.html
+++ b/ongoing.html
@@ -17,7 +17,7 @@ All the ongoing events will be published here for records of our events.
       <td> 1 </td><td>Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Ongoing (Qualifier) </td> <td> Closed </td>
     </tr>
     <tr>
-      <td> 2 </td><td>PUBG Mobile Attackers' Championship</td> <td> Nrs. 30000 </td><td> Ongoing (Grand Final) </td> <td> Closed </td>
+      <td> 2 </td><td>PUBG Mobile Attackers' Championship</td> <td> Nrs. 30000 </td><td> Ongoing (Final) </td> <td> Closed </td>
     </tr>
   </table>
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
