--- a/change.html
+++ b/change.html
@@ -19,7 +19,8 @@ Update 4 (22nd June): Added Change Logs to the website. <br>
 <br>
 Update 5 (23rd June): Added Discord, Youtube and Instragram widgets in Our Socials section. <br>
 <br>
-Update 6 (27th June): Updated the About Us section.
+Update 6 (27th June): Updated the About Us section. <br>
+<br>
 </body>
 <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </html>
