--- a/ongoing.html
+++ b/ongoing.html
@@ -14,7 +14,7 @@ All the ongoing events will be published here for records of our events.
       <td> SN. </td><td> Name of the event </td> <td> Prizepool </td> <td> Status </td> <td> Registration </td> 
     </tr>
     <tr>
-      <td> 1 </td><td>Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Ongoing (Quarter Final) </td> <td> Closed </td>
+      <td> 1 </td><td>Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Ongoing (Semi Final) </td> <td> Closed </td>
     </tr>
     <tr>
       <td> 2 </td><td>PUBG Mobile Attackers' Championship</td> <td> Nrs. 30000 </td><td> Ongoing (Final) </td> <td> Closed </td>
