--- a/complete.html
+++ b/complete.html
@@ -11,8 +11,10 @@
 All the completed events from Exiled Pride Official server in discord will be published here for records.
   <table border="2" align="center" width="75%" class="tc">
     <tr>
-      <td>SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups</td> <td class="td3"> 2nd Runner Ups</td>
+      <td> SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups </td> <td class="td3"> 2nd Runner Ups</td>
       </tr>
+<tr>
+<td> 1. </td> <td> EXP Management TDM Battle </td> <td> 1000UC </td> <td class="td1"> Tomorrow </td> <td class="td2"> Tomorrow </td> <td class="td3"> Tomorrow </td>
       </table> 
      <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
   </body>
