--- a/complete.html
+++ b/complete.html
@@ -14,7 +14,7 @@ All the completed events from Exiled Pride Official server in discord will be pu
       <td> SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups </td> <td class="td3"> 2nd Runner Ups</td>
       </tr>
 <tr>
-<td> 1. </td> <td> EXP Management TDM Battle </td> <td> 1000UC </td> <td class="td1"> Tomorrow </td> <td class="td2"> Tomorrow </td> <td class="td3"> Tomorrow </td>
+<td> 1. </td> <td> EXP Management TDM Battle </td> <td> 1000UC </td> <td class="td1"> Yet to publish </td> <td class="td2"> Yet to publish </td> <td class="td3"> Yet to publish </td>
       </table> 
      <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
   </body>
