--- a/ongoing.html
+++ b/ongoing.html
@@ -20,7 +20,7 @@ All the ongoing events will be published here for records of our events.
       <td> 2 </td><td> PUBG Mobile Attackers' Championship S-1 </td> <td> Nrs. 30000 </td><td> Ongoing (Final) </td> <td> Closed </td>
     </tr>
 <tr>
-<td> 3 </td><td> EXP Pro Series S-1  </td> <td> Nrs. 30000 </td><td> Not Started </td> <td>  </td>
+<td> 3 </td><td> EXP Pro Series S-1  </td> <td> Nrs. 30000 </td><td> Not Started </td> <td> Open (Paid Only) </td>
   </table>
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </body>
