--- a/complete.html
+++ b/complete.html
@@ -11,7 +11,7 @@
 All the completed events from Exiled Pride Official server in discord will be published here for records.
   <table border="2" align="center" width="75%" class="tc">
     <tr>
-      <td> SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups </td> <td class="td3"> 2nd Runner Ups</td>
+      <td> SN. </td> <td> Name of the event </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups </td> <td class="td3"> 2nd Runner Ups </td> <td> Remarks (if any) </td>
       </tr>
 <tr>
 <td> 1. </td> <td> EXP Management TDM Battle </td> <td> Nrs. 2000 </td> <td class="td1"> Null </td> <td class="td2"> Null </td> <td class="td3"> Null </td> <td> Divided equally to 4 semi finalists </td>
