--- a/complete.html
+++ b/complete.html
@@ -14,7 +14,7 @@ All the completed events from Exiled Pride Official server in discord will be pu
       <td> SN. </td> <td> Event Name </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups </td> <td class="td3"> 2nd Runner Ups </td>
       </tr>
 <tr>
-<td> 1. </td> <td> EXP Management TDM Battle </td> <td> Nrs. 2000 </td> <td class="td1"> Divided Esqually </td> <td class="td2"> To 4 </td> <td class="td3"> Semi-Finalists </td>
+<td> 1. </td> <td> EXP Management TDM Battle </td> <td> Nrs. 2000 </td> <td class="td1"> Divided Esqually To 4 Semi-Finalists </td> <td class="td2"> </td> <td class="td3"> </td>
       </table> 
      <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
   </body>
