--- a/ongoing.html
+++ b/ongoing.html
@@ -21,7 +21,11 @@ All the ongoing events will be published here for records of our events.
     </tr>
 <tr>
 <td> 3 </td><td> EXP Pro Series S-1  </td> <td> Nrs. 30000 </td><td> Not Started </td> <td> Open (Paid Only) </td>
-  </table>
+    </tr>
+<tr> 
+<td> 4 </td><td> PUBG Mobile Attackers' Championship S-2  </td> <td> Nrs. 50000 </td><td> Not Started </td> <td> Not Started </td>
+    </tr>
+</table>
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </body>
 </html>
