--- a/ongoing.html
+++ b/ongoing.html
@@ -17,7 +17,7 @@ All the ongoing events will be published here for records of our events.
       <td> 1 </td><td> Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Ongoing (Final) </td> <td> Closed </td>
     </tr>
 <tr>
-<td> 2 </td><td> EXP Pro Series S-1  </td> <td> Nrs. 30000 </td><td> Not Started </td> <td> Open (Paid Only) </td>
+<td> 2 </td><td> EXP Pro Series S-1  </td> <td> Nrs. 30000 </td><td> Not Started </td> <td> Closed </td>
     </tr>
 <tr> 
 <td> 3 </td><td> PUBG Mobile Attackers' Championship S-2  </td> <td> Nrs. 50000 </td><td> Not Started </td> <td> Not Started </td>
