--- a/complete.html
+++ b/complete.html
@@ -14,7 +14,7 @@ All the completed events from Exiled Pride Official server in discord will be pu
       <td> SN. </td> <td> Event Name </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups </td> <td class="td3"> 2nd Runner Ups </td>
       </tr>
 <tr>
-<td> 1. </td> <td> PUBG MOBILE ATTACKERS' CHAMPIONSHIP S-1 </td> <td> Nrs. 30,000 </td> <td class="td1"> STILL ALIVE </td> <td class="td2"> LETHAL NINJAS </td> <td class="td3"> KNIGHTS MILITANCY </td>
+<td> 1. </td> <td> PUBG MOBILE ATTACKERS' CHAMPIONSHIP S-1 </td> <td> Nrs. 30,000 </td> <td class="td1"> STILL ALIVE (15K) </td> <td class="td2"> LETHAL NINJAS (6K) </td> <td class="td3"> KNIGHTS MILITANCY (3.5K) </td>
       </table> 
      <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
   </body>
