--- a/home.html
+++ b/home.html
@@ -7,9 +7,9 @@
   <title>Exiled Pride Website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="VTA_NEW_LOGO.png" class="bodya">
+<body background="img/VTA_NEW_LOGO.png" class="bodya">
   <marquee scrolldelay=1> <font size=15> <font color="Lime"> Welcome to the Official website of Exiled Pride</font> </marquee>
-   <img src="img/exiledpride.jpeg" height="150" width="150" align="right"> 
+   <img src="img/VTA_NEW_LOGO.png" height="150" width="150" align="right"> 
     <A HREF="aboutus.html" class="a"> About Us </A> <---- The information About Us <br>
 <br>
     <A HREF="ongoing.html" class="a"> Ongoing Events </A> <---- The information related to the ongoing events in out server. <br>
