--- a/home.html
+++ b/home.html
@@ -7,9 +7,9 @@
   <title>Exiled Pride Website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="img/VTA_NEW_LOGO.png" class="bodya">
+<body background="img/DC_LOGO.png" class="bodya">
   <marquee scrolldelay=1> <font size=15> <font color="Lime"> Welcome to the Official website of Exiled Pride</font> </marquee>
-   <img src="img/VTA_NEW_LOGO.png" height="150" width="150" align="right"> 
+   <img src="img/DC_LOGO.png" height="150" width="150" align="right"> 
     <A HREF="aboutus.html" class="a"> About Us </A> <---- The information About Us <br>
 <br>
     <A HREF="ongoing.html" class="a"> Ongoing Events </A> <---- The information related to the ongoing events in out server. <br>
@@ -21,7 +21,5 @@
     <A HREF="contactus.html" class="a"> Our Socials </A> <----  Our Social handles for updates. <br>
 <br>
     <A HREF="https://surveyheart.com/form/62065b4d0943cd5d303077b7" class="a"> Apply For EXP </A> <---- Our staff application form for Discord server. <br>
-<br>
-<A HREF="change.html" class="a"> Change Logs </A> <---- Change logs of the website. <br>
 <br>
 </body> </html>
