--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Exiled Pride Website</title>
+  <title>Vintuna Esports</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body background="img/DC_LOGO.png" class="bodya">
