--- a/aboutus.html
+++ b/aboutus.html
@@ -8,28 +8,8 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 </body>
-<body background="img/1648878444418.png" class="bodya"> <h1> About Exiled Pride Esports</h1>
-  𝘌𝘹𝘪𝘭𝘦𝘥 𝘗𝘳𝘪𝘥𝘦 𝘌-𝘚𝘱𝘰𝘳𝘵𝘴 𝘣𝘦𝘭𝘰𝘯𝘨𝘴 𝘵𝘰 𝘢 𝘨𝘳𝘰𝘶𝘱 𝘰𝘧 𝘠𝘰𝘶𝘯𝘨𝘴𝘵𝘦𝘳𝘴. <br>
-Pratyush Mudbhari is the Founder of the E-sports team. <br>
-Along With Tisha Shrestha Mudbhari ,Ganesh Gyawali and Lakpa Dorje Tamang as our Honorable Owner. <br>
-▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬ <br>
-Exiled Pride E-sports creates its existence in Nepal. <br> 
-Team Is a Fully Hyped up Group of Youngsters who is aiming to gain exposure in the world by Gaming. <br>
-<br>
-We have a total of 7 Players dominating The Battle Ground. <br>
-▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬ <br>
-About Our Line Up: <br>
-<br>
-Lakpa Dorje Tamang aka Dorje002 as a manaer.<br>
-Abhishek Dangol aka Mr.Scooby as an Assaulter.<br>
-Arnab Raj Ranjit aka Snorlax as a Support.<br>
-Yunik Rai aka Eyepatch as a Entry Fragger.<br>
-Aayush Pyakhurel aka BirkheV2 as a Filter.<br>
-Joy Gurung aka Kakashi as an Assaulter.<br>
-Raachal Karmacharya aka MrAlone as an IGL.<br>
-<br>
-Our Vision is to become a renowned Gaming team & E-sports aiming to compete in major world Tournaments and to bring entertaining gaming experience to all the <br>
-gamers out there. <br>
+<body background="img/DC_LOGO.png" class="bodya"> <h1> About Vintuna Esports</h1>
+Coming soon.....
 </body>
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </html>
