--- a/ongoing.html
+++ b/ongoing.html
@@ -7,20 +7,14 @@
   <title>Ongoing Events</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="img/1648878444418.png" class="bodya"> <h1> Ongoing Events</h1>
+<body background="img/DC_LOGO.png" class="bodya"> <h1> Ongoing Events</h1>
 All the ongoing events will be published here for records of our events.
   <table border="2" align="center" width="75%" class="tc">
     <tr>
       <td> SN. </td><td> Name of the event </td> <td> Prizepool </td> <td> Status </td> <td> Registration </td> 
     </tr>
     <tr>
-      <td> 1 </td><td> Deadshot 10k League</td> <td> Nrs. 10000 </td> <td> Ongoing (Final) </td> <td> Closed </td>
-    </tr>
-<tr>
-<td> 2 </td><td> EXP Pro Series S-1  </td> <td> Nrs. 30000 </td><td> Not Started </td> <td> Closed </td>
-    </tr>
-<tr> 
-<td> 3 </td><td> PUBG Mobile Attackers' Championship S-2  </td> <td> Nrs. 50000 </td><td> Not Started </td> <td> Open </td>
+      <td> 1 </td><td> Vintuna Paid League </td> <td> Nrs. 15000 </td> <td> Registration </td> <td> Open </td>
     </tr>
 </table>
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
