--- a/complete.html
+++ b/complete.html
@@ -7,14 +7,18 @@
   <title>Completed Events</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body background="img/1648878444418.png" class="bodya"> <h1> Completed Events </h1>
-All the completed events from Exiled Pride Official server in discord will be published here for records.
+<body background="img/DC_LOGO.png" class="bodya"> <h1> Completed Events </h1>
+All the completed events from Vintuna Esports server in discord will be published here for records.
   <table border="2" align="center" width="75%" class="tc">
     <tr>
       <td> SN. </td> <td> Event Name </td> <td> Prizepool </td> <td class="td1"> Champions </td> <td class="td2"> 1st Runner Ups </td> <td class="td3"> 2nd Runner Ups </td>
       </tr>
 <tr>
 <td> 1. </td> <td> PUBG MOBILE ATTACKERS' CHAMPIONSHIP S-1 </td> <td> Nrs. 30,000 </td> <td class="td1"> STILL ALIVE (15K) </td> <td class="td2"> LETHAL NINJAS (6K) </td> <td class="td3"> KNIGHTS MILITANCY (3.5K) </td>
+    </tr>
+    <tr>
+      <tr>
+<td> 1. </td> <td> DEADSHOT LEAGUE </td> <td> Nrs. 15,000 </td> <td class="td1"> XYRESIC ESPORTS(5K) </td> <td class="td2">  </td> <td class="td3">  </td>
       </table> 
      <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
   </body>
