--- a/complete.html
+++ b/complete.html
@@ -18,7 +18,7 @@ All the completed events from Vintuna Esports server in discord will be publishe
     </tr>
     <tr>
       <tr>
-<td> 1. </td> <td> DEADSHOT LEAGUE </td> <td> Nrs. 15,000 </td> <td class="td1"> XYRESIC ESPORTS(5K) </td> <td class="td2">  </td> <td class="td3">  </td>
+<td> 1. </td> <td> DEADSHOT LEAGUE </td> <td> Nrs. 15,000 </td> <td class="td1"> XYRESIC ESPORTS(5K) </td> <td class="td2"> NO DATA  </td> <td class="td3"> NO DATA  </td>
       </table> 
      <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
   </body>
