--- a/home.html
+++ b/home.html
@@ -8,15 +8,13 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body background="img/DC_LOGO.png" class="bodya">
-  <marquee scrolldelay=1> <font size=15> <font color="Lime"> Welcome to the Official website of Exiled Pride</font> </marquee>
+  <marquee scrolldelay=1> <font size=15> <font color="Lime"> Welcome to the Official website of Vintuna Esports</font> </marquee>
    <img src="img/DC_LOGO.png" height="150" width="150" align="right"> 
     <A HREF="aboutus.html" class="a"> About Us </A> <---- The information About Us <br>
 <br>
     <A HREF="ongoing.html" class="a"> Ongoing Events </A> <---- The information related to the ongoing events in out server. <br>
 <br> 
     <A HREF="complete.html" class="a"> Completed Events </A> <---- The information related to the events successfully completed in our server. <br>
-<br>
-    <A HREF="paidscrims.html" class="a"> Paid Scrims </A> <---- The information related to Paid Scrims of our server. <br>
 <br>
     <A HREF="contactus.html" class="a"> Our Socials </A> <----  Our Social handles for updates. <br>
 <br>
