--- a/home.html
+++ b/home.html
@@ -18,6 +18,6 @@
 <br>
     <A HREF="contactus.html" class="a"> Our Socials </A> <----  Our Social handles for updates. <br>
 <br>
-    <A HREF="https://surveyheart.com/form/62065b4d0943cd5d303077b7" class="a"> Apply For EXP </A> <---- Our staff application form for Discord server. <br>
+    <A HREF="https://surveyheart.com/form/62065b4d0943cd5d303077b7" class="a"> Apply For VTA </A> <---- Our staff application form for Discord server. <br>
 <br>
 </body> </html>
