--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
   <title>Our Socials</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-    <body background="img/1648878444418.png" class="bodya">
+    <body background="img/DC_LOGO.png" class="bodya">
       <h1> Our Socials </h1>
         <A HREF="https://discord.gg/KKa4Z6ceY2" class="b"> <IMG SRC="img/discord logo.png" HEIGHT="25" WIDTH="35"> Click to join our discord </A>  <br>
 <iframe src="https://discord.com/widget?id=903597819447898143&theme=dark" width="280" height="300" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe> <br>
