--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9770550081131843"
+     crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Vintuna Esports</title>
