--- a/aboutus.html
+++ b/aboutus.html
@@ -11,6 +11,18 @@
 <body background="img/DC_LOGO.png" class="bodya"> <h1> About Vintuna Esports</h1>
 Coming soon.....
   <br>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9770550081131843"
+     crossorigin="anonymous"></script>
+<!-- Test -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9770550081131843"
+     data-ad-slot="4801117492"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </html>
