--- a/aboutus.html
+++ b/aboutus.html
@@ -6,23 +6,20 @@
   <meta name="viewport" content="width=device-width">
   <title> About Us</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 </head>
 </body>
 <body background="img/DC_LOGO.png" class="bodya"> <h1> About Vintuna Esports</h1>
 Coming soon.....
   <br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9770550081131843"
-     crossorigin="anonymous"></script>
-<!-- Test -->
-<ins class="adsbygoogle"
-     style="display:block"
+<amp-ad width="100vw" height="320"
+     type="adsense"
      data-ad-client="ca-pub-9770550081131843"
      data-ad-slot="4801117492"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
 </body>
  <A HREF="home.html" class="c"> <img src="img/backkarrow.png" class="mg"> </A>
 </html>
